[package]
name = "showBPP"
version = "1.0.0"
edition = "2024"
build = "src/build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
console = "0.16"
natural-sort-rs = "0.2.1"